--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.1",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.1"
   },
   "devDependencies": {
